--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -27,6 +27,7 @@
             <groupId>org.example</groupId>
             <artifactId>provider</artifactId>
             <version>1.0-SNAPSHOT</version>
+<!--            <scope>provided</scope>-->
         </dependency>
     </dependencies>
 
